--- a/GD.FinishingSystem.WEB/Views/Rulo/Index.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Rulo/Index.cshtml
@@ -117,10 +117,10 @@
             <th colspan="10">
                 <div>
                     Rulo List
-                    <a onclick="exportToExcel();" class="btn btn-sm btn-success"><i class="lni lni-printer"></i> Export to Excel</a>
+                    <a onclick="exportToExcel();" class="btn btn-sm btn-success"><i class="far fa-file-excel"></i> Export to Excel</a>
                     @if (User.IsInRole("Authorize", AuthType.Full))
                     {
-                        <a onclick="exportToExcelAllStock();" class="btn btn-sm btn-danger"><i class="lni lni-printer"></i> Export All Stock</a>
+                        <a onclick="exportToExcelAllStock();" class="btn btn-sm btn-danger"><i class="far fa-file-excel"></i> Export All Stock</a>
                     }
                 </div>
             </th>
@@ -212,71 +212,74 @@
                     <div style="display:block;width:150px;">
                         @if (item.SentAuthorizerID == null && item.FolioNumber == 0)
                         {
-                        @if (User.IsInRole("Rulo", AuthType.Update))
+                            @if (User.IsInRole("Rulo", AuthType.Update))
                             {
-                        <a onclick="showFolioNumber(@item.RuloID)" class="btn input-xs btn-success" data-backdrop="static" data-keyboard="false" href="#" data-toggle="modal" data-target="#modalDialogGeneral">
-                            <i class="lni lni-arrow-right-circle"></i>
-                        </a>
+                                <a onclick="showFolioNumber(@item.RuloID)" class="btn input-xs btn-success" data-backdrop="static" data-keyboard="false" href="#" data-toggle="modal" data-target="#modalDialogGeneral">
+                                    <i class="lni lni-arrow-right-circle"></i>
+                                </a>
 
-                        @Html.Raw(" | ")
+                                @Html.Raw(" | ")
                             }
                         }
                         else
                         {
-                        @if (User.IsInRole("Authorize", AuthType.Full))
+                            @if (User.IsInRole("Authorize", AuthType.Full))
                             {
-                        @if (item.SentAuthorizerID == null)
+                                @if (item.SentAuthorizerID == null)
                                 {
-                        <a onclick="authorizeRulo(@item.RuloID)" class="btn input-xs btn-danger">
-                            <i class="lni lni-checkmark-circle"></i>
-                        </a>
+                                    <a onclick="authorizeRulo(@item.RuloID)" class="btn input-xs btn-danger">
+                                        <i class="lni lni-checkmark-circle"></i>
+                                    </a>
 
-                        @Html.Raw(" | ")
+                                    @Html.Raw(" | ")
                                 }
 
                             }
                         }
 
                         @*@if (User.IsInRole("Authorize", AuthType.Show))
-        {
-            if (item.SentAuthorizerID == null && item.FolioNumber == 0)
-            {
-                @Html.Raw(" | ")
-            }
-        }*@
+                            {
+                                if (item.SentAuthorizerID == null && item.FolioNumber == 0)
+                                {
+                                    @Html.Raw(" | ")
+                                }
+                            }*@
 
                         @if (User.IsInRole("Piece", AuthType.Show))
                         {
-                        <a onclick="showPieces(@item.RuloID)" alt="Pieces" class="btn input-xs btn-warning" data-backdrop="static" data-keyboard="false" href="#" data-toggle="modal" data-target="#modalDialogPieces">
-                            <i alt="Pieces" class="lni lni-slice"></i>
-                        </a>
+                            <a onclick="showPieces(@item.RuloID)" alt="Pieces" class="btn input-xs btn-warning" data-backdrop="static" data-keyboard="false" href="#" data-toggle="modal" data-target="#modalDialogPieces">
+                                <i alt="Pieces" class="lni lni-slice"></i>
+                            </a>
                         }
 
                         @if (User.IsInRole("Authorize", AuthType.Show) || User.IsInRole("Piece", AuthType.Show))
-                        @Html.Raw(" | ")
+                            @Html.Raw(" | ")
 
                         @if (User.IsInRole("RuloProcessShow") || User.IsInRole("AdminFull") || User.IsInRole("RuloProcessFull"))
                         {
-                        <a asp-controller="RuloProcess" asp-action="Index" asp-route-ruloid="@item.RuloID" class="btn input-xs btn-info">
-                            <i class="lni lni-list "></i>
-                        </a>
+                            <a asp-controller="RuloProcess" asp-action="Index" asp-route-ruloid="@item.RuloID" class="btn input-xs btn-info">
+                                <i class="lni lni-list "></i>
+                            </a>
                         }
 
                         @if (User.IsInRole("Authorize", AuthType.Show) || User.IsInRole("Piece", AuthType.Show) || User.IsInRole("RuloProcess", AuthType.Show))
 
 
-                        @if (User.IsInRole("TestResult", AuthType.Add))
+                            @if (User.IsInRole("TestResult", AuthType.Add))
                             {
-                        @if (item.TestResultID == null || item.TestResultID == 0 || item.IsWaitingAnswerFromTest)
-                                {
-                        @Html.Raw(" | ")
-                        <a onclick="testResultValidateInfo(@item.RuloID)" class="btn  input-xs btn-dark"><i class="lni lni-flag"></i></a>
- <!-- <a onclick="testResult(@item.RuloID)" class="btn  input-xs btn-dark" data-toggle="modal" data-target="#modalDialog"><i class="lni lni-flag"></i></a>-->
+                                if (item.SentAuthorizerID != null)
+                                { 
+                                    @if (item.TestResultID == null || item.TestResultID == 0 || item.IsWaitingAnswerFromTest)
+                                    {
+                                        @Html.Raw(" | ")
+                                        <a onclick="testResultValidateInfo(@item.RuloID)" class="btn  input-xs btn-dark"><i class="fa fa-vial"></i></a>
+                                        <!-- <a onclick="testResult(@item.RuloID)" class="btn  input-xs btn-dark" data-toggle="modal" data-target="#modalDialog"><i class="lni lni-flag"></i></a>-->
+                                    }
                                 }
                             }
 
 
-                    </div>
+                        </div>
 
                     </td>
 
@@ -420,7 +423,7 @@
     <button type="button" class="btn btn-sm btn-danger"><i class="lni lni-checkmark-circle"></i> Authorize</button>
     <button type="button" class="btn btn-sm btn-success"><i class="lni lni-arrow-right-circle"></i> Send</button>
     <button type="button" class="btn btn-sm btn-info"><i class="lni lni-list "></i> Processes</button>
-    <button type="button" class="btn btn-sm btn-dark"><i class="lni lni-flag"> Test Result</i></button>
+    <button type="button" class="btn btn-sm btn-dark"><i class="fa fa-vial"></i> Test Result</button>
 </div>
 
 @section scripts{
@@ -899,5 +902,6 @@
 
         }
     }
+
 
 </script>
