--- a/GD.FinishingSystem.WEB/Views/Shared/_Layout.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
 
     <link href="~/css/styles.css" rel="stylesheet" />
     <script src="~/lib/font-awesome/all.min.js" crossorigin="anonymous"></script>
+    <link href="~/css/fontAwesome.css" rel="stylesheet" crossorigin="anonymous" />
     <link href="~/css/LineIcons.css" rel="stylesheet" />
 
     <link href="~/css/styleUpload.css" rel="stylesheet" />
