Added button to check test results from dbPerformanceStandards

--- a/GD.FinishingSystem.WEB/Views/Period/Index.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Period/Index.cshtml
@@ -89,8 +89,9 @@
 
     function createPeriod() {
     var stylePeriod = $("#stylePeriod").val();
-        if (stylePeriod == '') {
+        if (stylePeriod.trim() == '') {
             alert("Style no valid!");
+            return;
         }
 
         $.ajax({
