--- a/GD.FinishingSystem.WEB/Views/Shared/_Layout.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Shared/_Layout.cshtml
@@ -79,7 +79,7 @@
                                 <div class="sb-nav-link-icon">
                                     <i class="lni lni-sm lni-layers"></i>
                                 </div>
-                                Rulo
+                                Rulos
                             </a>
                         }
                         @if (User.IsInRole("RuloMigration", AuthType.Show))
@@ -88,7 +88,7 @@
                                 <div class="sb-nav-link-icon">
                                     <i class="lni lni-cloud-upload"></i>
                                 </div>
-                                Rulo Raw
+                                Raws
                             </a>
                         }
 
@@ -102,7 +102,7 @@
                                     <i class="lni lni-sm lni-cogs"></i>
 
                                 </div>
-                                Period
+                                Periods
                             </a>
                         }
 
@@ -113,7 +113,7 @@
                                     <i class="lni lni-sm lni-cogs"></i>
 
                                 </div>
-                                Definition Process
+                                Definition Processes
                             </a>
                         }
 
@@ -123,7 +123,7 @@
                                 <div class="sb-nav-link-icon">
                                     <i class="lni lni-sm lni-grid-alt"></i>
                                 </div>
-                                Floor
+                                Floors
                             </a>
                         }
 
@@ -133,7 +133,7 @@
                                 <div class="sb-nav-link-icon">
                                     <i class="lni lni-sm lni-eye"></i>
                                 </div>
-                                Test Definition
+                                Test Definitions
                             </a>
                         }
 
@@ -146,7 +146,7 @@
                                 <div class="sb-nav-link-icon">
                                     <i class="lni lni-printer"></i>
                                 </div>
-                                System Printer
+                                System Printers
                             </a>
                         }
                     </div>
